[gd_scene load_steps=8 format=3 uid="uid://c74g3a20bsthe"]

[ext_resource type="Script" path="res://scenes/neonrush/main.gd" id="1_ef42w"]
[ext_resource type="FontFile" uid="uid://dljvyga5k4cxa" path="res://fonts/Pixelify_Sans/static/PixelifySans-Medium.ttf" id="1_ssdgf"]
[ext_resource type="PackedScene" uid="uid://6mied8brcder" path="res://scenes/EchoVector/arena_card.tscn" id="2_o1b0r"]
[ext_resource type="AudioStream" uid="uid://x5y6gmlpcrny" path="res://music/select.mp3" id="3_wxslj"]
[ext_resource type="FontFile" uid="uid://biwmsktgaj5qa" path="res://fonts/Pixelify_Sans/static/PixelifySans-Bold.ttf" id="5_8wiux"]

[sub_resource type="LabelSettings" id="LabelSettings_fumop"]
font = ExtResource("1_ssdgf")
font_size = 41

[sub_resource type="LabelSettings" id="LabelSettings_03xg0"]
font = ExtResource("5_8wiux")
font_size = 200
font_color = Color(0, 1, 1, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_ef42w")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="Title" type="Label" parent="."]
offset_right = 640.0
offset_bottom = 50.0
text = "NeonRush"
label_settings = SubResource("LabelSettings_fumop")
horizontal_alignment = 1

[node name="ArenaCard" parent="." instance=ExtResource("2_o1b0r")]
offset_left = 220.0
offset_top = 100.0
offset_right = 420.0
offset_bottom = 356.0

[node name="RightArrow" type="Polygon2D" parent="."]
position = Vector2(454, 240)
scale = Vector2(2, 2)
polygon = PackedVector2Array(0, -11, 0, 11, 17, 0)

[node name="LeftArrow" type="Polygon2D" parent="."]
position = Vector2(186, 240)
scale = Vector2(-2, -2)
polygon = PackedVector2Array(0, -11, 0, 11, 17, 0)

[node name="SelectorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wxslj")
pitch_scale = 1.35

[node name="Label" type="Label" parent="."]
offset_left = 136.0
offset_top = 27.0
offset_right = 620.0
offset_bottom = 267.0
rotation = 0.330316
text = "SOON"
label_settings = SubResource("LabelSettings_03xg0")
